<?xml version="1.0"?>
<package format="2">
  <name>laser_line_extraction</name>
  <version>0.1.0</version>
  <description>
      A ROS package to extract lines from LaserScans, create Ellipses around them and apply an avoidance Modulation 
  </description>
  <maintainer email="christina.olveira@gmx.de">Chrissie Olveira</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>


   <build_depend>cmake_modules </build_depend>
   <build_depend>eigen </build_depend>
   <build_depend>geometry_msgs </build_depend>
   <build_depend> message_generation</build_depend>
   <build_depend>roscpp </build_depend>
   <build_depend> rospy</build_depend>
   <build_depend>sensor_msgs </build_depend>
   <build_depend>visualization_msgs </build_depend>
   <build_depend>tf2_ros </build_depend>
   <build_depend>message_runtime </build_depend>

   <exec_depend>cmake_modules </exec_depend>
   <exec_depend>eigen </exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>message_generation </exec_depend>
   <exec_depend>roscpp </exec_depend>
   <exec_depend> rospy</exec_depend>
   <exec_depend>sensor_msgs </exec_depend>
   <exec_depend>visualization_msgs </exec_depend>
   <exec_depend> tf2_ros</exec_depend>
   <exec_depend>message_runtime </exec_depend>



</package>
